--- a/SmartFridge/app/src/main/AndroidManifest.xml
+++ b/SmartFridge/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecipieDetailsActivity"></activity>
+        <activity android:name=".RecipiesDetails.RecipieDetailsActivity"></activity>
         <activity android:name=".CamScreen" />
-        <activity android:name=".Recipies" />
+        <activity android:name=".Recipes.RecipiesActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
