--- a/SmartFridge/app/src/main/AndroidManifest.xml
+++ b/SmartFridge/app/src/main/AndroidManifest.xml
@@ -4,14 +4,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_refrigerator"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_refrigerator"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecipiesDetails.RecipieDetailsActivity"></activity>
+        <activity android:name=".RecipesDetails.RecipieDetailsActivity"></activity>
         <activity android:name=".CamScreen" />
-        <activity android:name=".Recipes.RecipiesActivity" />
+        <activity android:name=".contents.Contents"/>
+        <activity android:name=".Recipes.RecipesActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
